--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,9 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
+- script: 
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     echo "HI This is my first sample Azure piepline"
-    bash sample.sh
+- bash:
+    sample.sh
