--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
     echo See https://aka.ms/yaml
     echo "HI This is my first sample Azure piepline"
 - bash:
-    sample.sh
+    bash sample.sh
