--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,4 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     echo "HI This is my first sample Azure piepline"
-- bash:
-    bash sample.sh
+- bash:sample.sh
