Update azure-pipelines.yml for Azure Pipelines
removed base 64 encoding

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,7 @@ steps:
       $user = "NnlCZThqSkxOcWhNVkFIKjRRbWtheWNzckhiUXFoTUxN"
       $pass= "Wng3VnVoVHMqNXlUNW1hbGxyaWdodFZCcm1NUEhyQndw"
       $Pair=  "$($username):$($password)"
-      $encodedCredentials = [System.Convert]::ToBase64String([System.Text.Encoding]::ASCII.GetBytes($Pair))
-      $headers = @{ Authorization = "Basic $encodedCredentials" }
+      $headers = @{ Authorization = "Basic $Pair" }
       $result = Invoke-WebRequest -Uri $root -Method Get -Headers $headers
       
     failOnStderr: true
