--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
       $headers = @{ Authorization = "Basic $encodedCredentials" }
       $resulthealth = Invoke-WebRequest -Uri $root -Method Get -Headers $headers
 
-      $coupon = @{"CouponCode":"CouponTest1","UserEmail":"sample","CustomerExternalId":"277f7023881e4e4ead3865deb978bb0b","Market":"SWE"}
+      $coupon = @{"CouponCode"="CouponTest1","UserEmail"="sample","CustomerExternalId"="277f7023881e4e4ead3865deb978bb0b","Market"="SWE"}
       $json = $coupon
       $resultjson = Invoke-WebRequest -Uri $root1 -Method POST -Headers $headers -Body $json -ContentType 'application/json'
 
